Bug 71714 - EDITING: Small capitals rendered as full-sized capitals
Summary: EDITING: Small capitals rendered as full-sized capitals
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha1
Hardware: x86-64 (AMD64) All
: high major
Assignee: Michael Stahl
URL:
Whiteboard: Confirmed:4.2.0.0.beta2:Ubuntu NoRepr...
Keywords: regression
Depends on:
Blocks: Font-Rendering mab4.2
  Show dependency treegraph
 
Reported: 2013-11-18 00:26 UTC by deepjungle.maca
Modified: 2021-08-30 13:38 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Small capitals are showed like capitals in editor (87.68 KB, image/png)
2013-11-18 00:26 UTC, deepjungle.maca
Details

Note You need to log in before you can comment on or make changes to this bug.
Description deepjungle.maca 2013-11-18 00:26:35 UTC
Created attachment 89377 [details]
Small capitals are showed like capitals in editor

OS: Mac OS X 10.9 Mavericks
Build: 868103846b9b32bfecd77c08055fdca69d0265c2

Step to reproduce

1. Write some text
2. Edit Paragraph Style -> Font Effects -> Effects -> Small capitals

Result:
See the attached image
Comment 1 retired 2013-11-21 10:37:39 UTC
Confirming -> NEW.

10.9 + LO Version: 4.2.0.0.alpha1+
Build ID: d93433ba1181f5d8f6ded0ed0c103df10ebb1f22
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2013-11-20_13:04:00

The preview shows "T"big and "ext" in smaller caps. That is not the case once the feature is applied to the writer text.
Comment 2 deepjungle.maca 2013-12-02 21:07:11 UTC
Please, fix it this bug. It's a regression in 4.2 against to 4.1. There is already now a beta, and the bug is still there no change from an alpha.
Comment 3 Luigi Barbieri 2013-12-05 08:03:38 UTC
The bug is still there also in 4.3 alfa
Comment 4 Robinson Tryon (qubit) 2013-12-06 09:57:38 UTC
CONFIRMED in LO 4.2.0.0.beta2 + Ubuntu 12.04.3

(In reply to comment #0)
> Step to reproduce
> 
> 1. Write some text

"TESTING FOOD HERE"

> 2. Edit Paragraph Style -> Font Effects -> Effects -> Small capitals

a) Select just "FOOD"
b) Format -> Character -> Font Effects -> Effects -> Small capitals
c) Click "OK"

> Result:

In both the editor pane and in the document, the characters of "FOOD" appear the same size as the full-size capital letters to the left and right.
Comment 5 Robinson Tryon (qubit) 2013-12-06 10:19:36 UTC
NOREPRO (per OP's analysis) in LO 4.1.2.2 + Ubuntu 12.04.3

(In reply to comment #4)
> > Step to reproduce
> > 1. Write some text
> "TESTING FOOD HERE"

(Oops -- that should read "TESTING Food HERE")

> > 2. Edit Paragraph Style -> Font Effects -> Effects -> Small capitals
> 
> a) Select just "FOOD"
> b) Format -> Character -> Font Effects -> Effects -> Small capitals
> c) Click "OK"

done

> > Result:
> 

The small caps render properly in the editor pane and in the document proper.


Regression Confirmed, setting Keyword: regression
Comment 6 Robinson Tryon (qubit) 2013-12-06 10:20:03 UTC
This bug appears on OSX and on Linux, so:
OS -> All
Comment 7 Robinson Tryon (qubit) 2013-12-06 10:22:56 UTC
Regression on basic functionality, so bumping up the Priority and Severity
Comment 8 Michael Stahl 2013-12-06 20:24:39 UTC
commit d908422f5763ed8ea79af81336ca564f46435baf
Author:     Caolán McNamara <caolanm@redhat.com>
AuthorDate: Thu Sep 12 10:38:48 2013 +0100

    Related: fdo#38838 remove XubString alias

... and the reason is really really subtle.
 
-    const XubString& rOldText = rDo.GetInf().GetText();
+    const OUString& rOldText = rDo.GetInf().GetText();
     rDo.GetInf().SetText( aTxt );

That used to _copy_ the string, but now it just references the member,
and so the SetText(aTxt) below overwrites rOldText.
Comment 9 Commit Notification 2013-12-06 20:24:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1050dfbf7daac2f2a4a8580c622447b55b147d57

fdo#71714: sw: fix small capitals rendering



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-12-06 20:27:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=29b5612ac135512bfa3762fbbdbc54339200b9ec&h=libreoffice-4-2

fdo#71714: sw: fix small capitals rendering


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 emmapk1 2020-11-13 14:28:28 UTC Comment hidden (spam)
Comment 12 uzairansari 2021-08-30 13:18:56 UTC Comment hidden (spam)