fdo#71714: sw: fix small capitals rendering

So f22006dc6ac34a35a060e15466cf6b2d2058617d changed the SwDrawTextInfo
to contain not a pointer but an actual OUString, and then
d908422f5763ed8ea79af81336ca564f46435baf changes
SwSubFont::DoOnCapitals() thus:

-    const XubString& rOldText = rDo.GetInf().GetText();
+    const OUString& rOldText = rDo.GetInf().GetText();
     rDo.GetInf().SetText( aTxt );

That used to _copy_ the string, but now it just references the
member, and so the SetText(aTxt) below overwrites rOldText.

Change-Id: I06d7ee7084c15d88b3e748ef18877b62e79bdd0e